--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
   <!-- Write your HTML in this file -->
   <ul>
-    <li>Aiman</li>
-    <li>Aiman</li>
-    <li>Aiman</li>
+    <li>2 slices of bread</li>
+    <li>2 slices of bread</li>
+    <li>2 slices of bread</li>
 
   </ul>
 
